# parallel_programming

./: CMakeLists.txt  task2.2.cpp
mpi/: task2.1.1.cpp  task2.1.3.cpp  task2.1.4.cpp  task2.1.5.cpp  task2.2.2.cpp  task2.2.3.cpp  task2.2.4.cpp  task2.2.5.cpp  task2.3.2.cpp  task2.3.3.cpp  task2.3.5.cpp
openmp/: task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp
